# DDR_Bench

./: .env.example  .gitignore  README.md  config.py  config.yaml  main.py  pyproject.toml  requirements.txt  run_agent.py  sitecustomize.py
.deepagents/: .mcp.json  AGENTS.md  AGENTS.md.orig  AGENTS_wo_csv.md  README.md
agent/: data_agent.py
data/10k/csv/: company_1800_summary.csv
evaluate/: unified_evaluator.py
insights_discovery/: README.md
insights_discovery/common/: batch.py  data_package.py  evaluate_checklist.py  evaluate_novelty_pairwise.py  export_data_packages.py  insight_generation_helper.py  mcp_servers.py  output.py  prepare_eval.py  run_directories.py  tools.py
insights_discovery/cubepi/: README.md  run_batch.py  run_batch.py.orig  run_single.py
insights_discovery/dcode/: README.md  run_all_companies.py  run_batch.py  run_single.py  trajectory_hook.py
insights_discovery/deepanalyze/: README.md  parse_report.py  run.sh  run_batch.py  run_single.py
insights_discovery/gemini_deep_research/: README.md  run_batch.py  run_single.py
insights_discovery/openai_o4_mini_deep_research/: README.md  parse_curl_response.py  run_20_and_eval.sh  run_batch.py  run_single.py
scripts/: summarize_react_tool_calls.py
tool_server/: base_mcp_server.py  code_mcp.py  mcp_client.py  sqlite_mcp.py
