[project]
name = "ddr-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cubepi[sqlite,tracing]>=0.11.0",
    "deepagents-code==0.1.13",
    "mcp==1.12.0",
    "pandas>=2.3.0",
]

[[tool.uv.index]]
url = "http://mirrors.i.h.pjlab.org.cn/pypi/simple/"
default = true
